<?xml version="1.0"?>
<package format="2">
  <name>pcl_conversions</name>
  <version>2.0.0</version>
  <description>Provides conversions from PCL data types and ROS message types</description>

  <author email="william@osrfoundation.org">William Woodall</author>
  <author email="paul@bovbel.com">Paul Bovbel</author>
  <author email="bill@neautomation.com">Bill Morris</author>
  <maintainer email="clalancette@openrobotics.org">Chris Lalancette</maintainer>

  <license>BSD</license>

  <url>http://wiki.ros.org/pcl_conversions</url>
  <url type="repository">https://github.com/ros-perception/pcl_conversions</url>
  <url type="bugtracker">https://github.com/ros-perception/pcl_conversions/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>builtin_interfaces</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <!-- TODO(clalancette): we don't support pcl_msgs yet,
       reenable this once we do
       <build_depend>pcl_msgs</build_depend> -->
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>builtin_interfaces</build_export_depend>
  <build_export_depend>eigen</build_export_depend>
  <build_export_depend>libpcl-all-dev</build_export_depend>
  <!-- TODO(clalancette): we don't support pcl_msgs yet,
       reenable this once we do
       <build_export_depend>pcl_msgs</build_export_depend> -->
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>libpcl-all-dev</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
